feat: translate snakefile to python file

--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -21,13 +21,632 @@ container: "docker://continuumio/miniconda3"
 
 ##### load rules #####
 
+# include: "rules/common.smk"
+import glob
 
-include: "rules/common.smk"
-include: "rules/ref.smk"
-include: "rules/trim.smk"
-include: "rules/qc.smk"
-include: "rules/align.smk"
-include: "rules/diffexp.smk"
+import pandas as pd
+from snakemake.utils import validate
+
+validate(config, schema="./schemas/config.schema.yaml")
+
+samples = (
+    pd.read_csv(config["samples"], sep="\t", dtype={"sample_name": str})
+    .set_index("sample_name", drop=False)
+    .sort_index()
+)
+
+
+def get_final_output():
+    final_output = expand(
+        "results/diffexp/{contrast}.diffexp.symbol.tsv",
+        contrast=config["diffexp"]["contrasts"],
+    )
+    final_output.append("results/deseq2/normcounts.symbol.tsv")
+    final_output.append("results/counts/all.symbol.tsv")
+    final_output.append("results/qc/multiqc_report.html")
+
+    if config["pca"]["activate"]:
+        # get all the variables to plot a PCA for
+        pca_variables = list(config["diffexp"]["variables_of_interest"])
+        if config["diffexp"]["batch_effects"]:
+            pca_variables.extend(config["diffexp"]["batch_effects"])
+        if config["pca"]["labels"]:
+            pca_variables.extend(config["pca"]["labels"])
+        final_output.extend(
+            expand("results/pca.{variable}.svg", variable=pca_variables)
+        )
+    return final_output
+
+
+validate(samples, schema="./schemas/samples.schema.yaml")
+
+units = (
+    pd.read_csv(config["units"], sep="\t", dtype={"sample_name": str, "unit_name": str})
+    .set_index(["sample_name", "unit_name"], drop=False)
+    .sort_index()
+)
+validate(units, schema="./schemas/units.schema.yaml")
+
+
+wildcard_constraints:
+    sample="|".join(samples["sample_name"]),
+    unit="|".join(units["unit_name"]),
+
+
+def get_cutadapt_input(wildcards):
+    unit = units.loc[wildcards.sample].loc[wildcards.unit]
+
+    if pd.isna(unit["fq1"]):
+        # SRA sample (always paired-end for now)
+        accession = unit["sra"]
+        return expand("sra/{accession}_{read}.fastq", accession=accession, read=[1, 2])
+
+    if unit["fq1"].endswith("gz"):
+        ending = ".gz"
+    else:
+        ending = ""
+
+    if pd.isna(unit["fq2"]):
+        # single end local sample
+        return "pipe/cutadapt/{S}/{U}.fq1.fastq{E}".format(
+            S=unit.sample_name, U=unit.unit_name, E=ending
+        )
+    else:
+        # paired end local sample
+        return expand(
+            "pipe/cutadapt/{S}/{U}.{{read}}.fastq{E}".format(
+                S=unit.sample_name, U=unit.unit_name, E=ending
+            ),
+            read=["fq1", "fq2"],
+        )
+
+
+def get_cutadapt_pipe_input(wildcards):
+    files = list(
+        sorted(glob.glob(units.loc[wildcards.sample].loc[wildcards.unit, wildcards.fq]))
+    )
+    assert len(files) > 0
+    return files
+
+
+def is_paired_end(sample):
+    sample_units = units.loc[sample]
+    fq2_null = sample_units["fq2"].isnull()
+    sra_null = sample_units["sra"].isnull()
+    paired = ~fq2_null | ~sra_null
+    all_paired = paired.all()
+    all_single = (~paired).all()
+    assert (
+        all_single or all_paired
+    ), "invalid units for sample {}, must be all paired end or all single end".format(
+        sample
+    )
+    return all_paired
+
+
+def get_fq(wildcards):
+    if config["trimming"]["activate"]:
+        # activated trimming, use trimmed data
+        if is_paired_end(wildcards.sample):
+            # paired-end sample
+            return dict(
+                zip(
+                    ["fq1", "fq2"],
+                    expand(
+                        "results/trimmed/{sample}_{unit}_{group}.fastq.gz",
+                        group=["R1", "R2"],
+                        **wildcards,
+                    ),
+                )
+            )
+        # single end sample
+        return {
+            "fq1": "results/trimmed/{sample}_{unit}_single.fastq.gz".format(**wildcards)
+        }
+    else:
+        # no trimming, use raw reads
+        u = units.loc[(wildcards.sample, wildcards.unit)]
+        if pd.isna(u["fq1"]):
+            # SRA sample (always paired-end for now)
+            accession = u["sra"]
+            return dict(
+                zip(
+                    ["fq1", "fq2"],
+                    expand(
+                        "sra/{accession}_{group}.fastq",
+                        accession=accession,
+                        group=["R1", "R2"],
+                    ),
+                )
+            )
+        if not is_paired_end(wildcards.sample):
+            return {"fq1": f"{u.fq1}"}
+        else:
+            return {"fq1": f"{u.fq1}", "fq2": f"{u.fq2}"}
+
+
+def get_strandedness(units):
+    if "strandedness" in units.columns:
+        return units["strandedness"].tolist()
+    else:
+        strand_list = ["none"]
+        return strand_list * units.shape[0]
+
+
+def get_deseq2_threads(wildcards=None):
+    # https://twitter.com/mikelove/status/918770188568363008
+    few_coeffs = False if wildcards is None else len(get_contrast(wildcards)) < 10
+    return 1 if len(samples) < 100 or few_coeffs else 6
+
+
+def is_activated(xpath):
+    c = config
+    for entry in xpath.split("/"):
+        c = c.get(entry, {})
+    return bool(c.get("activate", False))
+
+
+def get_bioc_species_name():
+    first_letter = config["ref"]["species"][0]
+    subspecies = config["ref"]["species"].split("_")[1]
+    return first_letter + subspecies
+
+
+def get_fastqs(wc):
+    if config["trimming"]["activate"]:
+        return expand(
+            "results/trimmed/{sample}/{unit}_{read}.fastq.gz",
+            unit=units.loc[wc.sample, "unit_name"],
+            sample=wc.sample,
+            read=wc.read,
+        )
+    unit = units.loc[wc.sample]
+    if all(pd.isna(unit["fq1"])):
+        # SRA sample (always paired-end for now)
+        accession = unit["sra"]
+        return expand(
+            "sra/{accession}_{read}.fastq", accession=accession, read=wc.read[-1]
+        )
+    fq = "fq{}".format(wc.read[-1])
+    return units.loc[wc.sample, fq].tolist()
+
+
+def get_contrast(wildcards):
+    return config["diffexp"]["contrasts"][wildcards.contrast]
+
+
+
+
+# include: "rules/ref.smk"
+
+rule get_genome:
+    output:
+        "resources/genome.fasta",
+    log:
+        "logs/get-genome.log",
+    params:
+        species=config["ref"]["species"],
+        datatype="dna",
+        build=config["ref"]["build"],
+        release=config["ref"]["release"],
+    cache: True
+    wrapper:
+        "v3.5.3/bio/reference/ensembl-sequence"
+
+
+rule get_annotation:
+    output:
+        "resources/genome.gtf",
+    params:
+        species=config["ref"]["species"],
+        fmt="gtf",
+        build=config["ref"]["build"],
+        release=config["ref"]["release"],
+        flavor="",
+    cache: True
+    log:
+        "logs/get_annotation.log",
+    wrapper:
+        "v3.5.3/bio/reference/ensembl-annotation"
+
+
+rule genome_faidx:
+    input:
+        "resources/genome.fasta",
+    output:
+        "resources/genome.fasta.fai",
+    log:
+        "logs/genome-faidx.log",
+    cache: True
+    wrapper:
+        "v3.5.3/bio/samtools/faidx"
+
+
+rule bwa_index:
+    input:
+        "resources/genome.fasta",
+    output:
+        multiext("resources/genome.fasta", ".amb", ".ann", ".bwt", ".pac", ".sa"),
+    log:
+        "logs/bwa_index.log",
+    resources:
+        mem_mb=369000,
+    cache: True
+    wrapper:
+        "v3.5.3/bio/bwa/index"
+
+
+rule star_index:
+    input:
+        fasta="resources/genome.fasta",
+        annotation="resources/genome.gtf",
+    output:
+        directory("resources/star_genome"),
+    threads: 4
+    params:
+        extra=lambda wc, input: f"--sjdbGTFfile {input.annotation} --sjdbOverhang 100",
+    log:
+        "logs/star_index_genome.log",
+    cache: True
+    wrapper:
+        "v3.5.3/bio/star/index"
+
+# include: "rules/trim.smk"
+rule get_sra:
+    output:
+        "sra/{accession}_1.fastq",
+        "sra/{accession}_2.fastq",
+    log:
+        "logs/get-sra/{accession}.log",
+    wrapper:
+        "v3.5.3/bio/sra-tools/fasterq-dump"
+
+
+rule cutadapt_pipe:
+    input:
+        get_cutadapt_pipe_input,
+    output:
+        pipe("pipe/cutadapt/{sample}/{unit}.{fq}.{ext}"),
+    log:
+        "logs/pipe-fastqs/catadapt/{sample}_{unit}.{fq}.{ext}.log",
+    wildcard_constraints:
+        ext=r"fastq|fastq\.gz",
+    threads: 0
+    shell:
+        "cat {input} > {output} 2> {log}"
+
+
+rule cutadapt_pe:
+    input:
+        get_cutadapt_input,
+    output:
+        fastq1="results/trimmed/{sample}_{unit}_R1.fastq.gz",
+        fastq2="results/trimmed/{sample}_{unit}_R2.fastq.gz",
+        qc="results/trimmed/{sample}_{unit}.paired.qc.txt",
+    log:
+        "logs/cutadapt/{sample}_{unit}.log",
+    params:
+        extra=config["params"]["cutadapt-pe"],
+        adapters=lambda w: str(units.loc[w.sample].loc[w.unit, "adapters"]),
+    threads: 8
+    wrapper:
+        "v3.5.3/bio/cutadapt/pe"
+
+
+rule cutadapt_se:
+    input:
+        get_cutadapt_input,
+    output:
+        fastq="results/trimmed/{sample}_{unit}_single.fastq.gz",
+        qc="results/trimmed/{sample}_{unit}_single.qc.txt",
+    log:
+        "logs/cutadapt/{sample}_{unit}.log",
+    params:
+        extra=config["params"]["cutadapt-se"],
+        adapters=lambda w: str(units.loc[w.sample].loc[w.unit, "adapters"]),
+    threads: 8
+    wrapper:
+        "v3.5.3/bio/cutadapt/se"
+
+
+# include: "rules/qc.smk"
+## RSEQC
+
+
+rule rseqc_gtf2bed:
+    input:
+        "resources/genome.gtf",
+    output:
+        bed="results/qc/rseqc/annotation.bed",
+        db=temp("results/qc/rseqc/annotation.db"),
+    log:
+        "logs/rseqc_gtf2bed.log",
+    conda:
+        "../envs/gffutils.yaml"
+    script:
+        "../scripts/gtf2bed.py"
+
+
+rule rseqc_junction_annotation:
+    input:
+        bam="results/star/{sample}_{unit}/Aligned.sortedByCoord.out.bam",
+        bed="results/qc/rseqc/annotation.bed",
+    output:
+        "results/qc/rseqc/{sample}_{unit}.junctionanno.junction.bed",
+    priority: 1
+    log:
+        "logs/rseqc/rseqc_junction_annotation/{sample}_{unit}.log",
+    params:
+        extra=r"-q 255",  # STAR uses 255 as a score for unique mappers
+        prefix=lambda w, output: output[0].replace(".junction.bed", ""),
+    conda:
+        "../envs/rseqc.yaml"
+    shell:
+        "junction_annotation.py {params.extra} -i {input.bam} -r {input.bed} -o {params.prefix} "
+        "> {log[0]} 2>&1"
+
+
+rule rseqc_junction_saturation:
+    input:
+        bam="results/star/{sample}_{unit}/Aligned.sortedByCoord.out.bam",
+        bed="results/qc/rseqc/annotation.bed",
+    output:
+        "results/qc/rseqc/{sample}_{unit}.junctionsat.junctionSaturation_plot.pdf",
+    priority: 1
+    log:
+        "logs/rseqc/rseqc_junction_saturation/{sample}_{unit}.log",
+    params:
+        extra=r"-q 255",
+        prefix=lambda w, output: output[0].replace(".junctionSaturation_plot.pdf", ""),
+    conda:
+        "../envs/rseqc.yaml"
+    shell:
+        "junction_saturation.py {params.extra} -i {input.bam} -r {input.bed} -o {params.prefix} "
+        "> {log} 2>&1"
+
+
+rule rseqc_stat:
+    input:
+        "results/star/{sample}_{unit}/Aligned.sortedByCoord.out.bam",
+    output:
+        "results/qc/rseqc/{sample}_{unit}.stats.txt",
+    priority: 1
+    log:
+        "logs/rseqc/rseqc_stat/{sample}_{unit}.log",
+    conda:
+        "../envs/rseqc.yaml"
+    shell:
+        "bam_stat.py -i {input} > {output} 2> {log}"
+
+
+rule rseqc_infer:
+    input:
+        bam="results/star/{sample}_{unit}/Aligned.sortedByCoord.out.bam",
+        bed="results/qc/rseqc/annotation.bed",
+    output:
+        "results/qc/rseqc/{sample}_{unit}.infer_experiment.txt",
+    priority: 1
+    log:
+        "logs/rseqc/rseqc_infer/{sample}_{unit}.log",
+    conda:
+        "../envs/rseqc.yaml"
+    shell:
+        "infer_experiment.py -r {input.bed} -i {input.bam} > {output} 2> {log}"
+
+
+rule rseqc_innerdis:
+    input:
+        bam="results/star/{sample}_{unit}/Aligned.sortedByCoord.out.bam",
+        bed="results/qc/rseqc/annotation.bed",
+    output:
+        "results/qc/rseqc/{sample}_{unit}.inner_distance_freq.inner_distance.txt",
+    priority: 1
+    log:
+        "logs/rseqc/rseqc_innerdis/{sample}_{unit}.log",
+    params:
+        prefix=lambda w, output: output[0].replace(".inner_distance.txt", ""),
+    conda:
+        "../envs/rseqc.yaml"
+    shell:
+        "inner_distance.py -r {input.bed} -i {input.bam} -o {params.prefix} > {log} 2>&1"
+
+
+rule rseqc_readdis:
+    input:
+        bam="results/star/{sample}_{unit}/Aligned.sortedByCoord.out.bam",
+        bed="results/qc/rseqc/annotation.bed",
+    output:
+        "results/qc/rseqc/{sample}_{unit}.readdistribution.txt",
+    priority: 1
+    log:
+        "logs/rseqc/rseqc_readdis/{sample}_{unit}.log",
+    conda:
+        "../envs/rseqc.yaml"
+    shell:
+        "read_distribution.py -r {input.bed} -i {input.bam} > {output} 2> {log}"
+
+
+rule rseqc_readdup:
+    input:
+        "results/star/{sample}_{unit}/Aligned.sortedByCoord.out.bam",
+    output:
+        "results/qc/rseqc/{sample}_{unit}.readdup.DupRate_plot.pdf",
+    priority: 1
+    log:
+        "logs/rseqc/rseqc_readdup/{sample}_{unit}.log",
+    params:
+        prefix=lambda w, output: output[0].replace(".DupRate_plot.pdf", ""),
+    conda:
+        "../envs/rseqc.yaml"
+    shell:
+        "read_duplication.py -i {input} -o {params.prefix} > {log} 2>&1"
+
+
+rule rseqc_readgc:
+    input:
+        "results/star/{sample}_{unit}/Aligned.sortedByCoord.out.bam",
+    output:
+        "results/qc/rseqc/{sample}_{unit}.readgc.GC_plot.pdf",
+    priority: 1
+    log:
+        "logs/rseqc/rseqc_readgc/{sample}_{unit}.log",
+    params:
+        prefix=lambda w, output: output[0].replace(".GC_plot.pdf", ""),
+    conda:
+        "../envs/rseqc.yaml"
+    shell:
+        "read_GC.py -i {input} -o {params.prefix} > {log} 2>&1"
+
+
+rule multiqc:
+    input:
+        expand(
+            "results/star/{unit.sample_name}_{unit.unit_name}/Aligned.sortedByCoord.out.bam",
+            unit=units.itertuples(),
+        ),
+        expand(
+            "results/qc/rseqc/{unit.sample_name}_{unit.unit_name}.junctionanno.junction.bed",
+            unit=units.itertuples(),
+        ),
+        expand(
+            "results/qc/rseqc/{unit.sample_name}_{unit.unit_name}.junctionsat.junctionSaturation_plot.pdf",
+            unit=units.itertuples(),
+        ),
+        expand(
+            "results/qc/rseqc/{unit.sample_name}_{unit.unit_name}.infer_experiment.txt",
+            unit=units.itertuples(),
+        ),
+        expand(
+            "results/qc/rseqc/{unit.sample_name}_{unit.unit_name}.stats.txt",
+            unit=units.itertuples(),
+        ),
+        expand(
+            "results/qc/rseqc/{unit.sample_name}_{unit.unit_name}.inner_distance_freq.inner_distance.txt",
+            unit=units.itertuples(),
+        ),
+        expand(
+            "results/qc/rseqc/{unit.sample_name}_{unit.unit_name}.readdistribution.txt",
+            unit=units.itertuples(),
+        ),
+        expand(
+            "results/qc/rseqc/{unit.sample_name}_{unit.unit_name}.readdup.DupRate_plot.pdf",
+            unit=units.itertuples(),
+        ),
+        expand(
+            "results/qc/rseqc/{unit.sample_name}_{unit.unit_name}.readgc.GC_plot.pdf",
+            unit=units.itertuples(),
+        ),
+        expand(
+            "logs/rseqc/rseqc_junction_annotation/{unit.sample_name}_{unit.unit_name}.log",
+            unit=units.itertuples(),
+        ),
+    output:
+        "results/qc/multiqc_report.html",
+    log:
+        "logs/multiqc.log",
+    wrapper:
+        "v3.5.3/bio/multiqc"
+
+
+# include: "rules/align.smk"
+
+rule align:
+    input:
+        unpack(get_fq),
+        index="resources/star_genome",
+        gtf="resources/genome.gtf",
+    output:
+        aln="results/star/{sample}_{unit}/Aligned.sortedByCoord.out.bam",
+        reads_per_gene="results/star/{sample}_{unit}/ReadsPerGene.out.tab",
+    log:
+        "logs/star/{sample}_{unit}.log",
+    params:
+        idx=lambda wc, input: input.index,
+        extra=lambda wc, input: f'--outSAMtype BAM SortedByCoordinate --quantMode GeneCounts --sjdbGTFfile {input.gtf} {config["params"]["star"]}',
+    threads: 24
+    wrapper:
+        "v3.5.3/bio/star/align"
+
+
+# include: "rules/diffexp.smk"
+rule count_matrix:
+    input:
+        expand(
+            "results/star/{unit.sample_name}_{unit.unit_name}/ReadsPerGene.out.tab",
+            unit=units.itertuples(),
+        ),
+    output:
+        "results/counts/all.tsv",
+    log:
+        "logs/count-matrix.log",
+    params:
+        samples=units["sample_name"].tolist(),
+        strand=get_strandedness(units),
+    conda:
+        "../envs/pandas.yaml"
+    script:
+        "../scripts/count-matrix.py"
+
+
+rule gene_2_symbol:
+    input:
+        counts="{prefix}.tsv",
+    output:
+        symbol="{prefix}.symbol.tsv",
+    params:
+        species=get_bioc_species_name(),
+    log:
+        "logs/gene2symbol/{prefix}.log",
+    conda:
+        "../envs/biomart.yaml"
+    script:
+        "../scripts/gene2symbol.R"
+
+
+rule deseq2_init:
+    input:
+        counts="results/counts/all.tsv",
+    output:
+        "results/deseq2/all.rds",
+        "results/deseq2/normcounts.tsv",
+    conda:
+        "../envs/deseq2.yaml"
+    log:
+        "logs/deseq2/init.log",
+    threads: get_deseq2_threads()
+    script:
+        "../scripts/deseq2-init.R"
+
+
+rule pca:
+    input:
+        "results/deseq2/all.rds",
+    output:
+        report("results/pca.{variable}.svg", "../report/pca.rst"),
+    conda:
+        "../envs/deseq2.yaml"
+    log:
+        "logs/pca.{variable}.log",
+    script:
+        "../scripts/plot-pca.R"
+
+
+rule deseq2:
+    input:
+        "results/deseq2/all.rds",
+    output:
+        table=report("results/diffexp/{contrast}.diffexp.tsv", "../report/diffexp.rst"),
+        ma_plot=report("results/diffexp/{contrast}.ma-plot.svg", "../report/ma.rst"),
+    params:
+        contrast=get_contrast,
+    conda:
+        "../envs/deseq2.yaml"
+    log:
+        "logs/deseq2/{contrast}.diffexp.log",
+    threads: get_deseq2_threads()
+    script:
+        "../scripts/deseq2.R"
+
 
 
 ##### target rules #####
